Sat Sep 20 18:04:50 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/apc-hid.c: Fix typo.

Sat Sep 20 09:29:05 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/apc-hid.c: Add enviromental sensor

Fri Sep 19 11:59:27 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - common/state.c,drivers/main.c,include/extstate.h: Make it possible to
   permanently override a variable set by the UPS (if it returns wrong static
   data) or to set a default value (if some static data is missing, either in
   the driver or in the UPS).

Fri Sep 19 11:50:35 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/mge-xml.c: Change from numerical to text message in test result.

Sat Sep 6 09:52:20 UTC 2008 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

  - drivers/bcmxcp.c: Changed some comments and TODO list.

Sat Aug 23 20:11:10 UTC 2008 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

  - drivers/bcmxcp.c: Set the right version number that should be 0.15.

Sat Aug 23 19:48:20 UTC 2008 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

  - drivers/bcmxcp.[ch]: Added info from loadsegment. Also changed so the
    instantcommand for outlet switching is only visible if you have it.
    Changed revision for the driver to 0.14.

Thu Aug 21 19:37:40 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - common/Makefile.am: restore revision number for development builds

Thu Aug 21 19:08:59 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - <various>/Makefile.am: libtool fixes (patch provided by Stanislav
   Brabec, from openSUSE)

Fri Aug 15 23:48:38 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c: Increase send retries to 10 (as needed by some
   protocol 2001 units)

Thu Aug  7 09:39:57 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/tripplite.[ch]: significantly improved failure mode handling and
   also basic checks of data validity (from Nicholas J. Kain)

Mon Aug  4 12:49:13 UTC 2008 / Arjen de Korte <arjen@de-korte.org>