@@ -1,0 +1,30 @@
+/* hp-hid.h - subdriver to monitor HP USB/HID devices with NUT
+ *
+ *  Copyright (C)
+ *  2003 - 2005 Arnaud Quette <arnaud.quette@free.fr>
+ *  2005 - 2006 Peter Selinger <selinger@users.sourceforge.net>
+ *
+ *  This program is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program; if not, write to the Free Software
+ *  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
+ *
+ */
+
+#ifndef HP_HID_H
+#define HP_HID_H
+
+#include "usbhid-ups.h"
+
+extern subdriver_t hp_subdriver;
+
+#endif /* HP_HID_H */
