@@ -36,6 +36,7 @@
 	#include "apc-hid.h"
 	#include "belkin-hid.h"
 	#include "cps-hid.h"
+	#include "hp-hid.h"
 	#include "liebert-hid.h"
 	#include "tripplite-hid.h"
 #endif
@@ -54,6 +55,7 @@ static subdriver_t *subdriver_list[] = {
 	&apc_subdriver,
 	&belkin_subdriver,
 	&cps_subdriver,
+	&hp_subdriver,
 	&liebert_subdriver,
 	&tripplite_subdriver,
 #endif
